--- a/ec2.ini
+++ b/ec2.ini
@@ -13,7 +13,7 @@
 # separated list of regions. E.g. 'us-east-1,us-west-1,us-west-2' and do not
 # provide the 'regions_exclude' option. If this is set to 'auto', AWS_REGION or
 # AWS_DEFAULT_REGION environment variable will be read to determine the region.
-regions = all
+regions = eu-west-1
 regions_exclude = us-gov-west-1, cn-north-1
 
 # When generating inventory, Ansible needs to know how to address a server.
@@ -78,7 +78,7 @@ route53 = False
 
 # By default, only EC2 instances in the 'running' state are returned. Set
 # 'all_instances' to True to return all instances regardless of state.
-all_instances = False
+all_instances = True
 
 # By default, only EC2 instances in the 'running' state are returned. Specify
 # EC2 instance states to return as a comma-separated list. This
