--- a/gather_facts.yml
+++ b/gather_facts.yml
@@ -1,20 +1,33 @@
-- name: Gather facts
-  hosts: localhost
+- hosts: localhost
+  gather_facts: False
   tasks:
-    - name: Gather facts
-      ec2_remote_facts:
+    - name: Gather remote facts
+      ec2_instance_facts:
         region: eu-west-1
       register: ec2_facts
-    - name: Get only running instance DNS names.
+
+    - name: Print all instances status
       debug:
-        msg: "Instance: {{ item.0 }} has public DNS name: {{ item.1 }}"
+        msg: "Instance: {{item.0 }} with tags {{ item.1 }} is {{ item.2 }}"
       with_together:
-        - "{{ ec2_facts.instances|selectattr('state', 'equalto', 'running')|map(attribute='tags.Name')|list }}"
-        - "{{ ec2_facts.instances|selectattr('state', 'equalto', 'running')|map(attribute='public_dns_name')|list }}"
-    - name: Add instances to running Ansible group in memory (not persistent between playbook runs).
+        - "{{ ec2_facts.instances|map(attribute='instance_id')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='tags.Name')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='state.name')|list }}"
+
+    - name: Add instances to Ansible groups in memory
       add_host:
-        groups: "{{ item.0 }}"
-        hostname: "{{ item.1 }}"
+        groups: "{{ item.1 }}, {{ item.2 }}, ec2"
+        name: "{{ item.0 }}"
+        state: "{{ item.2 }}"
+        public_address: "{{ item.3 }}"
       with_together:
-        - "{{ ec2_facts.instances|selectattr('state', 'equalto', 'running')|map(attribute='tags.Name')|list }}"
-        - "{{ ec2_facts.instances|selectattr('state', 'equalto', 'running')|map(attribute='privatepublic_dns_name_ip_address')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='instance_id')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='tags.Name')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='state.name')|list }}"
+        - "{{ ec2_facts.instances|map(attribute='public_dns_name_ip_address')|list }}"
+
+    - name: Print all instances properties of Ansible groups in memory
+      debug:
+        msg: "Instance: {{ item }} in groups {{ ', '.join(hostvars[item].group_names) }} is {{ hostvars[item].state }}{% if hostvars[item].state == 'running' %} on address {{hostvars[item].public_address}}{% endif %}"
+      with_items:
+        "{{ groups.all }}"
