--- a/start_stopped_instance.yml
+++ b/start_stopped_instance.yml
@@ -8,22 +8,22 @@
     debug:
       msg: "Instance: {{ item.key }} [{{ ', '.join(item.value.group_names) }}] is {{ item.value.ec2_state }}{% if item.value.ec2_state == 'running' %} on address {{item.value.ec2_public_dns_name}}{% endif %}"
     with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'running'
+    when: item.value.ec2_state == 'stopped'
 
-  - name: Add running instances to hosts group
+  - name: Add stopped instances to hosts group
     add_host:
-      groups: running
+      groups: stopped
       name: "{{ item.value.ansible_host }}"
-      ansible_host: "{{ item.value.ec2_public_dns_name }}"
-      key_name: "{{ item.value.ec2_key_name }}"
-      key_file: "./{{ item.value.ec2_key_name}}.pem"
-      ansible_python_interpreter: /usr/bin/python3
     with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'running'
+    when: item.value.ec2_state == 'stopped'
 
-- hosts: running
-  remote_user: ubuntu
-  # gather_facts: False
-  tasks:
-    - name: test connection
-      ping:
+  - name: Start stopped instances
+    vars:
+    ec2:
+      instance_ids: "{{ item.value.ec2_id }}"
+      region: "{{ region }}"
+      state: running
+      wait: True
+      assign_public_ip: yes
+    with_dict: "{{ hostvars }}"
+    when: item.value.ec2_state == 'stopped'
