--- a/stop_running_instances.yml
+++ b/stop_running_instances.yml
@@ -8,14 +8,12 @@
     debug:
       msg: "Instance: {{ item.key }} [{{ ', '.join(item.value.group_names) }}] is {{ item.value.ec2_state }}{% if item.value.ec2_state == 'running' %} on address {{item.value.ec2_public_dns_name}}{% endif %}"
     with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'stopped'
+    when: item.value.ec2_state == 'running'
 
-  - name: Start stopped instances
+  - name: Stop instances
     ec2:
       instance_ids: "{{ item.value.ec2_id }}"
       region: "{{ region }}"
-      state: running
-      wait: True
-      assign_public_ip: yes
+      state: stopped
     with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'stopped'
+    when: item.value.ec2_state == 'running'
