--- a/print_facts.yml
+++ b/print_facts.yml
@@ -1,4 +1,4 @@
 - hosts: localhost
   gather_facts: False
   tasks:
-    - include_tasks: print_facts_task.yml
+    - include_tasks: tasks/list_instances.yml
