--- a/install_jupyter_notebook.yml
+++ b/install_jupyter_notebook.yml
@@ -3,23 +3,8 @@
   vars:
     region: eu-west-1
   tasks:
-
-  - name: Print all instances properties of Ansible groups in memory
-    debug:
-      msg: "Instance: {{ item.key }} [{{ ', '.join(item.value.group_names) }}] is {{ item.value.ec2_state }}{% if item.value.ec2_state == 'running' %} on address {{item.value.ec2_public_dns_name}}{% endif %}"
-    with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'running'
-
-  - name: Add running instances to hosts group
-    add_host:
-      groups: running
-      name: "{{ item.value.ansible_host }}"
-      ansible_host: "{{ item.value.ec2_public_dns_name }}"
-      key_name: "{{ item.value.ec2_key_name }}"
-      key_file: "./{{ item.value.ec2_key_name}}.pem"
-      ansible_python_interpreter: /usr/bin/python3
-    with_dict: "{{ hostvars }}"
-    when: item.value.ec2_state == 'running'
+  - include_tasks: tasks/list_instances.yml state=['running']
+  - include_tasks: tasks/add_running_instances_to_hosts.yml
 
 - hosts: running
   remote_user: ubuntu
