removed unused variable

--- a/start_stopped_instances.yml
+++ b/start_stopped_instances.yml
@@ -4,4 +4,4 @@
     region: eu-west-1
   tasks:
   - include_tasks: tasks/list_instances.yml state=['stopped']
-  - include_tasks: tasks/start_stopped_instances.yml state=['stopped']
+  - include_tasks: tasks/start_stopped_instances.yml
