--- a/tasks/find_AMI.yml
+++ b/tasks/find_AMI.yml
@@ -7,6 +7,6 @@
 
 - name: Print search results
   debug:
-    msg: "{{ item }}"
+    msg: "{{ item.name }} | {{ item.image_id }}"
   with_items:
     "{{ ami_find.images }}"
