--- a/stop_instances_and_tunnels.yml
+++ b/stop_instances_and_tunnels.yml
@@ -11,7 +11,12 @@
   vars:
     instance_port: 8888
     local_port: 8888
+    region: eu-west-1
   tasks:
-    - include_tasks: tasks/start_jupyter.yml
     - include_tasks: tasks/stop_ssh_tunnel_from_localhost.yml
-    - include_tasks: tasks/create_ssh_tunnel_from_localhost.yml
+    - name: stop instances
+      ec2:
+        instance_ids: "{{ ec2_id }}"
+        region: "{{ region }}"
+        state: stopped
+      delegate_to: localhost
