--- a/tasks/list_instances.yml
+++ b/tasks/list_instances.yml
@@ -1,7 +1,7 @@
 
 - name: Print all instances properties of Ansible groups in memory
   vars:
-    state: ['stopped', 'running', 'absent', 'present']
+    state: ['pending', 'running', 'shutting-down', 'terminated', 'stopping', 'stopped']
   debug:
     msg: "Instance: {{ item.key }} [{{ ', '.join(item.value.group_names) }}] is {{ item.value.ec2_state }}{% if item.value.ec2_state == 'running' %} on address {{item.value.ec2_public_dns_name}}{% endif %}"
   with_dict: "{{ hostvars }}"
