--- a/tasks/add_running_instances_to_hosts.yml
+++ b/tasks/add_running_instances_to_hosts.yml
@@ -1,3 +1,9 @@
+- name: get current directory
+  command: pwd
+  register: pwd_output
+
+- set_fact: current_directory="{{ pwd_output.stdout}}"
+
 - name: Add running instances to hosts group
   add_host:
     groups: running
@@ -5,7 +11,7 @@
     ansible_host: "{{ item.value.ec2_public_dns_name }}"
     ansible_user: ubuntu
     ansible_ssh_extra_args: '-o StrictHostKeyChecking=no'
-    ansible_ssh_private_key_file: /home/quentin/Documents/coding/ansible_aws/{{ item.value.ec2_key_name}}.pem
+    ansible_ssh_private_key_file: "{{ current_directory }}/{{ item.value.ec2_key_name}}.pem"
     ansible_python_interpreter: /usr/bin/python3
   with_dict: "{{ hostvars }}"
   when: item.value.ec2_state == 'running'
