restructured directory with roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,8 @@
 [defaults]
 retry_files_enabled = False
+# stdout_callback = oneline
+# stdout_callback = debug
+# stdout_callback = dense
+# stdout_callback = minimal
+# stdout_callback = context_demo
+# stdout_callback = yaml
