--- a/roles/EC2/tasks/create_instance.yml
+++ b/roles/EC2/tasks/create_instance.yml
@@ -1,9 +1,11 @@
 - name: create new instance
   ec2:
-    image: "{{ ami_find.images[0].image_id }}"
+    image: "{{ AMI_find.images[0].image_id }}"
     instance_type: "{{ ec2_instance_type | default('t2.micro') }}"
     key_name: "{{ key_name | default('example_key')}}"
     region: "{{ region }}"
-    # network_interfaces:
     wait: yes
-    count: 1
+    exact_count: "{{ exact_count }}"
+    instance_tags: "{{ instance_tags }}"
+    count_tag: "{{ instance_tags }}"
+    instance_initiated_shutdown_behavior: terminate
