--- a/roles/jupyter/tasks/start_jupyter.yml
+++ b/roles/jupyter/tasks/start_jupyter.yml
@@ -1,8 +1,6 @@
 - name: stop jupyter
-  command: pkill -f ''jupyter.*{{ instance_port }}''
+  command: pkill -f ''jupyter.*{{ jupyter_port }}''
   ignore_errors: yes
 
 - name: start jupyter
-  vars:
-    instance_port: 8888
-  shell: nohup jupyter notebook --NotebookApp.token='''' --NotebookApp.port={{ instance_port }} </dev/null >/dev/null 2>&1 &
+  shell: nohup jupyter notebook --NotebookApp.token='''' --NotebookApp.port={{ jupyter_port }} </dev/null >/dev/null 2>&1 &
