--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,3 +6,5 @@ retry_files_enabled = False
 # stdout_callback = minimal
 # stdout_callback = context_demo
 # stdout_callback = yaml
+timeout = 25
+host_key_checking = False
