--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,5 @@
 [defaults]
 retry_files_enabled = False
-# stdout_callback = oneline
-# stdout_callback = debug
-# stdout_callback = dense
-# stdout_callback = minimal
-# stdout_callback = context_demo
-# stdout_callback = yaml
+callback_whitelist = timer
 timeout = 25
 host_key_checking = False
