--- a/roles/EC2/tasks/main.yml
+++ b/roles/EC2/tasks/main.yml
@@ -1,9 +1,11 @@
+- debug:
+    msg: "{{ key_directory }}"
+
 - include_tasks: list_instances.yml
 - include_tasks: find_AMI.yml
   when: AMI_image_id is not defined
 - include_tasks: create_or_terminate_instance.yml
 
-- include_tasks: get_current_directory.yml
 - include_tasks: refresh_inventory.yml
 - include_tasks: list_instances.yml
 - include_tasks: add_running_instances_to_hosts.yml
