--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,8 @@ retry_files_enabled = False
 callback_whitelist = timer
 timeout = 25
 host_key_checking = False
+inventory = ec2.py
+gathering = explicit
+
+[privilege_escalation]
+become_ask_pass = True
