updated roles and playbooks

--- a/roles/EC2/tasks/create_or_terminate_instance.yml
+++ b/roles/EC2/tasks/create_or_terminate_instance.yml
@@ -1,3 +1,6 @@
+- set_fact: exact_count=0
+  when: action_type == 'stop'
+
 - name: create or terminate instances
   ec2:
     image: "{{ AMI_image_id }}"
