--- a/roles/EC2/tasks/main.yml
+++ b/roles/EC2/tasks/main.yml
@@ -2,13 +2,14 @@
 - include_tasks: find_AMI.yml
   when: AMI_image_id is not defined
 - include_tasks: create_or_terminate_instance.yml
+  when: (action_type == 'start') or (action_type == 'stop')
 
 - include_tasks: refresh_inventory.yml
 - include_tasks: list_instances.yml
 - include_tasks: add_running_instances_to_hosts.yml
-  when: exact_count > 0
+  when: action_type != 'stop'
 
 - include_tasks: wait_for_ssh.yml
-  when: exact_count > 0
+  when: action_type == 'start'
 - include_tasks: list_instances.yml
-  when: exact_count > 0
+  when: action_type == 'start'
