--- a/roles/sshfs/tasks/main.yml
+++ b/roles/sshfs/tasks/main.yml
@@ -1,4 +1,3 @@
-- include_tasks: mount_sshfs_from_localhost.yml
-  when: not umount_sshfs
 - include_tasks: umount_sshfs_from_localhost.yml
-  when: umount_sshfs
+- include_tasks: mount_sshfs_from_localhost.yml
+  when: action_type == 'mount'
