--- a/roles/ssh_tunnel/tasks/main.yml
+++ b/roles/ssh_tunnel/tasks/main.yml
@@ -1,4 +1,3 @@
-- include_tasks: create_ssh_tunnel_from_localhost.yml
-  when: not stop_ssh
 - include_tasks: stop_ssh_tunnel_from_localhost.yml
-  when: stop_ssh
+- include_tasks: create_ssh_tunnel_from_localhost.yml
+  when: action_type == 'start'
