--- a/roles/EFS/defaults/main.yml
+++ b/roles/EFS/defaults/main.yml
@@ -1,3 +1,9 @@
+EFS_name: default_EFS
+EFS_tag_Name: default_EFS
+
 nfs_package: nfs-common # nfs-utils on RHEL/CentOS/Amazon Linux
 EFS_file_system_id: fs-6246cfab
 EFS_mount_directory: /home/ubuntu/EFS/
+
+subnet_id: 
+security_groups: [ "{{}}" ]
