--- a/roles/VPC/tasks/list_subnet.yml
+++ b/roles/VPC/tasks/list_subnet.yml
@@ -2,6 +2,7 @@
   ec2_vpc_subnet_facts:
     filters:
       "tag:Name": "{{ subnet_name }}"
+  delegate_to: localhost
   register: subnet_facts
 
 - debug:
