--- a/test.yml
+++ b/test.yml
@@ -1,9 +1,15 @@
 - hosts: localhost
   roles:
-    - VPC
-    - EC2
+  - VPC
+  # - EC2
+  # tasks:
+  # - debug:
+  #     msg: "{{ hostvars }}"
 
-- hosts: running
-  roles:
-    - EFS
-    - sshfs
+# - hosts: running
+#   roles:
+#     - jupyter
+#     - role: ssh_tunnel
+#       instance_port: "{{ jupyter_port }}"
+#       local_port: "{{ jupyter_port }}"
+#     - EFS
