got EFS working

--- a/deep_learning_stop.yml
+++ b/deep_learning_stop.yml
@@ -1,7 +1,6 @@
 - hosts: localhost
   roles:
-    - VPC
-    - role: EC2
-      action_type: stop
-    - role: sshfs
-      action_type: umount
+  - common
+  - VPC
+  - role: EC2
+    action_type: stop
