--- a/roles/EC2/tasks/create_or_terminate_instance.yml
+++ b/roles/EC2/tasks/create_or_terminate_instance.yml
@@ -5,6 +5,7 @@
   ec2:
     vpc_subnet_id: "{{ subnet.id }}"
     group: "{{ group_name }}"
+    assign_public_ip: yes
     image: "{{ AMI_image_id }}"
     instance_type: "{{ EC2_instance_type }}"
     key_name: "{{ key_name }}"
