--- a/roles/VPC/tasks/create_VPC.yml
+++ b/roles/VPC/tasks/create_VPC.yml
@@ -18,6 +18,7 @@
     vpc_id: "{{ VPC.id }}"
     region: "{{ region }}"
     state: present
-  register: IGW
+  delegate_to: localhost
+  register: gateway
 
-- debug: msg="{{ IGW }}"
+- debug: msg="{{ gateway }}"
