--- a/roles/EFS/tasks/create_EFS.yml
+++ b/roles/EFS/tasks/create_EFS.yml
@@ -5,7 +5,10 @@
     tags:
       name: "{{ EFS_tag_Name }}"
       purpose: file-storage
-    targets:
-      - subnet_id: "{{ subnet_id }}"
-        security_groups: "{{ security_groups }}"
+    targets: "{{ targets }}"
   delegate_to: localhost
+  register: EFS_output
+
+- set_fact: EFS="{{ EFS_output.efs }}"
+
+- debug: msg="{{ EFS }}"
