--- a/roles/VPC/tasks/list_group.yml
+++ b/roles/VPC/tasks/list_group.yml
@@ -1,15 +1,15 @@
 - name: gather group facts
   ec2_group_facts:
-    filters:
-      group-name: "{{ group_name }}"
   delegate_to: localhost
   register: ec2_groups
 
+- set_fact: security_groups="{{ ec2_groups.security_groups }}"
+
 - name: print groups
   debug:
-    msg: "{{ ec2_groups.security_groups }}"
+    msg: "{{ security_groups }}"
 
 - name: print groups rules
   debug:
     msg: "group named '{{ item.group_name }}' with id '{{ item.group_id }}' for IP ranges:{% for permission in item.ip_permissions%} {{ permission.ip_ranges }}{% endfor %}"
-  with_items: "{{ ec2_groups.security_groups }}"
+  with_items: "{{ security_groups }}"
