created role creating utils directory

--- a/roles/EFS/defaults/main.yml
+++ b/roles/EFS/defaults/main.yml
@@ -3,4 +3,4 @@ EFS_tag_Name: default_EFS
 
 nfs_package: nfs-common # nfs-utils on RHEL/CentOS/Amazon Linux
 EFS_file_system_id: fs-6246cfab
-EFS_mount_directory: /home/ubuntu/EFS/
+EFS_mount_directory: "/home/{{ ansible_user }}/EFS/"
