--- a/test.yml
+++ b/test.yml
@@ -36,3 +36,5 @@
     targets:
     - subnet_id: "{{ hostvars.localhost.subnet.id }}"
       security_groups: "{{ hostvars.localhost.security_groups | selectattr('group_name', 'equalto', 'default_EFS') | map(attribute='group_id') | list }}"
+
+  - role: instance_utils
