--- a/roles/EC2/defaults/main.yml
+++ b/roles/EC2/defaults/main.yml
@@ -1,5 +1,6 @@
-AMI_owner: 898082745236
-AMI_name: "Deep Learning*Conda*Amazon*"
+# AMI_owner: 898082745236
+# AMI_name: "Deep Learning*Amazon*7*"
+AMI_image_id: ami-50570f29
 EC2_user: ec2-user
 instance_tags:
   Name: deep_learning
