--- a/roles/instance_utils/tasks/instance_directory.yml
+++ b/roles/instance_utils/tasks/instance_directory.yml
@@ -1,13 +1,13 @@
 - name: delete existing instance directory
   file:
-    path: instance/
+    path: "{{ instance_utils_directory }}"
     state: absent
   delegate_to: localhost
   ignore_errors: yes
 
 - name: create instance directory
   file:
-    path: instance/
+    path: "{{ instance_utils_directory }}"
     state: directory
   delegate_to: localhost
   when: action_type == 'create'
