--- a/roles/key/tasks/create_key.yml
+++ b/roles/key/tasks/create_key.yml
@@ -1,4 +1,4 @@
-- set_fact: key_path="{{ key_directory }}/{{ key_name }}.pem"
+- set_fact: key_path="{{ current_directory }}/{{ key_name }}.pem"
 
 - name: check that the key local file exists
   stat:
