--- a/roles/EC2/tasks/main.yml
+++ b/roles/EC2/tasks/main.yml
@@ -1,4 +1,6 @@
 - include_tasks: list_instances.yml
+- include_tasks: list_subnet.yml
+- include_tasks: list_group.yml
 - include_tasks: find_AMI.yml
   when: AMI_image_id is not defined
 - include_tasks: create_or_terminate_instance.yml
