updated ansible scripts

--- a/roles/instance_utils/defaults/main.yml
+++ b/roles/instance_utils/defaults/main.yml
@@ -2,3 +2,6 @@ action_type: create
 instance_utils_directory: ../ansible_aws_instance/
 
 EFS_mount_directory: "/home/{{ ansible_user }}/EFS/"
+
+local_sshfs_directory: "{{ instance_utils_directory }}remote_filesystem/"
+remote_sshfs_directory: "/home/{{ ansible_user }}/"
