--- a/roles/instance_utils/tasks/main.yml
+++ b/roles/instance_utils/tasks/main.yml
@@ -5,3 +5,6 @@
 
 - include_tasks: remote_ftp.yml
   when: action_type == 'create'
+
+- include_tasks: sshfs_mount_umount.yml
+  when: action_type == 'create'
