--- a/roles/jupyter/tasks/start_jupyter.yml
+++ b/roles/jupyter/tasks/start_jupyter.yml
@@ -1,4 +1,4 @@
 - name: start jupyter
-  shell: "nohup jupyter notebook --NotebookApp.token={{ jupyter_token }} --NotebookApp.port={{ jupyter_port }} </dev/null >/home/{{ ansible_user }}/jupyter.log 2>&1 &"
+  shell: "nohup jupyter lab --NotebookApp.token={{ jupyter_token }} --NotebookApp.port={{ jupyter_port }} </dev/null >/home/{{ ansible_user }}/jupyter.log 2>&1 &"
   args:
     executable: bash
