--- a/roles/EC2/tasks/create_or_terminate_instance.yml
+++ b/roles/EC2/tasks/create_or_terminate_instance.yml
@@ -15,3 +15,4 @@
     instance_tags: "{{ instance_tags }}"
     count_tag: "{{ instance_tags }}"
     instance_initiated_shutdown_behavior: terminate
+    spot_price: "{{ spot_price }}"
