--- a/roles/instance_utils/tasks/instance_directory.yml
+++ b/roles/instance_utils/tasks/instance_directory.yml
@@ -4,6 +4,7 @@
     state: absent
   delegate_to: localhost
   ignore_errors: yes
+  when: action_type != 'create'
 
 - name: create instance directory
   file:
