--- a/roles/EC2/defaults/main.yml
+++ b/roles/EC2/defaults/main.yml
@@ -5,10 +5,14 @@ EC2_user: ec2-user
 instance_tags:
   Name: deep_learning
 exact_count: 1
-EC2_instance_type: r4.4xlarge
-spot_price: 1
+
 # EC2_instance_type: m5.4xlarge
-# EC2_instance_type: x1e.2xlarge
-# EC2_instance_type: m5.large
-# EC2_instance_type: t2.micro
+# spot_price: 1
+
+EC2_instance_type: cr1.8xlarge
+spot_price: 1
+
+# EC2_instance_type: p2.xlarge
+# spot_price: 1
+
 action_type: start
