--- a/test.yml
+++ b/test.yml
@@ -5,8 +5,16 @@
 - hosts: running
   roles:
   - instance_utils
-  - aws_credentials
-  - role: EFS
-    targets:
-    - subnet_id: "{{ hostvars.localhost.subnet.id }}"
-      security_groups: "{{ hostvars.localhost.security_groups | selectattr('group_name', 'equalto', 'default_EFS') | map(attribute='group_id') | list }}"
+  tasks:
+  - name: install git
+    package:
+      name: git
+  - name: clone git repo
+    vars:
+      ansible_user: ec2-user
+      gitlab_repo_name: recommender_system_back
+      gitlab_repo_vendor: the_insighters
+      gitlab_token: rJZoxBR_VVLQgpgafj94
+    git:
+      repo: "https://oauth2:{{ gitlab_token }}@gitlab.com/{{ gitlab_repo_vendor }}/{{ gitlab_repo_name }}.git"
+      dest: "/home/{{ ansible_user }}/{{ gitlab_repo_name }}"
