simplified aws_credentials role

--- a/roles/aws_credentials/tasks/main.yml
+++ b/roles/aws_credentials/tasks/main.yml
@@ -7,4 +7,4 @@
 - name: copy localhost aws credentials to remote
   copy:
     src: "{{ localhost_home }}/.aws"
-    dest: "/home/{{ ansible_user }}/"
+    dest: "{{ remote_home }}/"
