--- a/roles/ssh_tunnel/tasks/create_ssh_tunnel_from_localhost.yml
+++ b/roles/ssh_tunnel/tasks/create_ssh_tunnel_from_localhost.yml
@@ -1,3 +1,3 @@
 - name: start ssh tunnel from localhost
-  shell: "nohup ssh -i {{ ansible_ssh_private_key_file }} -N {{ ansible_user }}@{{ ansible_host }} -L {{ instance_port }}:localhost:{{ local_port }} &"
+  shell: "nohup ssh -i {{ ansible_ssh_private_key_file }} -N {{ remote_user }}@{{ ansible_host }} -L {{ remote_port }}:localhost:{{ local_port }} &"
   delegate_to: localhost
