--- a/start_EC2.yml
+++ b/start_EC2.yml
@@ -1,16 +1,11 @@
 - hosts: localhost
   roles:
-  - EC2
+  - { role: EC2, action_type: start }
 
 - hosts: running
   roles:
-  - role: EFS
-    targets:
-    - subnet_id: "{{ hostvars.localhost.subnet.id }}"
-      security_groups: "{{ hostvars.localhost.security_groups | selectattr('group_name', 'equalto', 'default_EFS') | map(attribute='group_id') | list }}"
-  - instance_utils
+  - { role: instance_utils, action_type: create }
   - aws_credentials
   - jupyter
-  - role: ssh_tunnel
-    instance_port: "{{ jupyter_port }}"
-    local_port: "{{ jupyter_port }}"
+  - { role: ssh_tunnel, action_type: start }
+  - gitlab
