--- a/stop_EC2.yml
+++ b/stop_EC2.yml
@@ -1,8 +1,4 @@
 - hosts: localhost
   roles:
-
-  - role: EC2
-    action_type: stop
-
-  - role: instance_utils
-    action_type: delete
+  - { role: EC2, action_type: stop }
+  - { role: instance_utils, action_type: delete }
