changed role API to match ansible philosophy

--- a/roles/EC2/tasks/create_or_terminate_instance.yml
+++ b/roles/EC2/tasks/create_or_terminate_instance.yml
@@ -1,5 +1,5 @@
 - set_fact: exact_count=0
-  when: action_type == 'stop'
+  when: state == 'stopped'
 
 - name: create or terminate instances
   ec2:
