updated ansible stdout config for less verbose output

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,12 @@
 [defaults]
 retry_files_enabled = False
-callback_whitelist = timer
 timeout = 25
 host_key_checking = False
 inventory = ec2.py
 gathering = explicit
+callback_whitelist = timer
+display_skipped_hosts = no
+display_ok_hosts = no
 
 [privilege_escalation]
 become_ask_pass = True
