--- a/roles/EC2/tasks/create_or_terminate_instance.yml
+++ b/roles/EC2/tasks/create_or_terminate_instance.yml
@@ -16,3 +16,9 @@
     count_tag: "{{ instance_tags }}"
     instance_initiated_shutdown_behavior: terminate
     spot_price: "{{ spot_price }}"
+    volumes:
+      - device_name: /dev/xvda
+        volume_type: io1
+        iops: 1000
+        volume_size: "{{ volume_size }}"
+        delete_on_termination: true
